2006-05-10 Jens Tkotz <jens@peino.de> 1.5.4-svn-b6

 * Added php-gettext
   https://savannah.nongnu.org/projects/php-gettext/

2006-05-02 Jens Tkotz <jens@peino.de> 1.5.4-svn-b5

 * Updated and/or added $Id SVN Keywords.

2006-04-26 Jens Tkotz <jens@peino.de> 1.5.4-svn-b4

 * Fix: Often bots access the ecardform without having correct photo loaded etc.
        This leaves unnecessary Errormessage in Apaches logfile

   Thanks to Peter Schumacher from forums.

 * Fix: Only do userinput sanitation if value contains html tags.

 * FIX: Compressing an Image with having maximum filesize failed.
   Thanks to Scott Barnes (atomsmith) from forums.

 * FIX: Just compressing(no resize) an Image with NetPBM failed.

 * Changing Checks in setup to SVN.

2006-04-22 Jens Tkotz <jens@peino.de> 1.5.4-cvs-b3

 * Fix: Name of not logged in commenters was displayed as "anonymous" instead of entered name.
   Thanks to Mottie from forum.

2006-04-13 Jens Tkotz <jens@peino.de> 1.5.4-cvs-b2

 * Fix: Gallery uses the same XML_HTMLSax3 library as postNuke does.
	Thus a redeclare error occured.
   Thanks to Christian Ruffer.

2006-04-11 Jens Tkotz <jens@peino.de> 1.5.4-cvs-b1

 * Fix: Album Permissions were not working proper.
   Thanks to Jonathan Stanley (SHS` in IRC)

2006-04-06 Chris Kelly <ckdake@ckdake.com> 1.5.3

 * Release: 1.5.3

2006-04-06 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b23

 * Change: Allow HTML again also in comments and user captions for images.

2006-04-06 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b22

 * Fix: ImageMap was opened was popup when no icons are used.

 * Change: Removed obsolete function showChoice()

2006-04-05 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b21

 * Fix: Frame around movies in photo view was broken.

2006-04-04 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b20

 * Fix: Use gTranslate instead of _( in albums.php, view_album.php and view_photo.php

2006-04-04 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b19
